# zedibox

./: Cargo.toml  README.md  build.rs  config.json  main.py  pybox.py
python/: main.py  pybox.py
src/: command.rs  device.rs  lib.rs  main.rs  pybox.rs
ui/: demo.slint  zedibox.slint
ui/widgets/: command.slint  console.slint  devices.slint  focus_touch_area.slint  icon_button.slint  state_layer.slint  styling.slint  text_button.slint
