[package]
name = "zedi_box"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = {version = "0.22.3", features = ["macros"]}
slint = {version = "1.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[build-dependencies]
slint-build = "1.8.0"

[profile.release]
lto = true
codegen-units = 1
